# scapegoat-api

./: .dockerignore  .env.example  Dockerfile  README.md  build-and-deploy.sh  docker-compose.yml  pyproject.toml  run.ps1
src/: main.py
src/api/: __init__.py  dependencies.py  middleware.py
src/api/routes/: chat.py  health.py
src/core/: config.py
src/core/constants/: prompts.py
src/providers/: base.py  gemini_provider.py
src/schemas/: chat.py
src/services/: ai_service.py  token_utils.py
tests/: conftest.py  test_ai_service.py  test_chat_route.py  test_config.py
